# ai_agents_course

./: .gitignore  README.md  config.py  executor.py  guardrails.py  main.py  mini_feedback_loop.py  prompts.py  pyproject.toml  steps_agent.py  steps_fallback.py  steps_kaggle.py
ai_agents_course/final_project/ai_agent_step_by_step/: 01_.py  02_.py
ai_agents_course/final_project/ai_agent_step_by_step/04_agent/: Dockerfile  (+4 more)
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
data/: 2gis_gasprom.csv  2gis_licard.csv  2gis_rn_card.csv  2gis_rn_card2.csv
notebooks_kb/: baseline_hist_gradient_boosting.ipynb  baseline_random_forest.ipynb  blend_predictions.py  catboost_classification.ipynb  catboost_regression.ipynb  classification_histgb_pipeline.ipynb  cross_validation_classification.ipynb  cross_validation_regression.ipynb  eda_target_detection.ipynb  eda_template.ipynb  experiment_tracking.md  feature_frequency_encoding.ipynb  metric_selection_notes.md  missingness_features.ipynb  preprocessing_columntransformer.ipynb  rag_notes.md  rag_search_queries.md  random_forest_baseline.ipynb  regression_histgb_pipeline.ipynb  submission_classification.ipynb  submission_regression.ipynb  tabular_cv_template.py  target_log_transform.ipynb  train_valid_split_template.py
rag/: __init__.py  embed_index.py  indexer.py  notebook_chunker.py  notebook_loader.py  rag_tools.py  retriever.py  retriever_backend.py  utils.py
tools/: web_context.py  web_search_tool.py
(+4 files in other folders)
